# csess

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOS.md
docs/: DESIGN.md
docs/research/: 2026-06-01-tui-prior-art.md
scripts/: demo.tape  gen-demo.py
src/: main.rs  model.rs  preview.rs  resume.rs  search.rs  theme.rs  tree.rs  tui.rs
src/index/: mod.rs
src/parser/: claude.rs  codex.rs  mod.rs
tests/: golden_parity.rs  index_incremental.rs
tests/fixtures/claude/: 01-string-title.jsonl  02-array-title.jsonl  03-toolresult-skip.jsonl  04-ismeta-skip.jsonl  05-denylist-command.jsonl  06-denylist-caveat.jsonl  07-multiline-title.jsonl  08-long-cjk.jsonl  09-cwd-missing.jsonl  10-no-prompt.jsonl  11-broken-line.jsonl  12-surrogate.jsonl  13-cwd-trailing-slash.jsonl  14-cwd-single.jsonl  15-ismeta-number.jsonl  16-ismeta-string-false.jsonl  17-cwd-null-then-real.jsonl  18-cwd-empty-string.jsonl  19-denylist-wordboundary.jsonl  20-arr-no-text.jsonl  21-emoji-long.jsonl  22-leading-ws-denylist.jsonl  23-nbsp-denylist.jsonl
tests/fixtures/codex/: c01-user-message.jsonl  c02-fallback-no-usermsg.jsonl  c03-no-prompt.jsonl  c04-image-multiline.jsonl
